# mip_template

./: pyproject.toml  requirements.txt
mip_template/: __init__.py  __main__.py  constants.py  exceptions.py  main.py  schemas.py  utils.py
test_mip_template/: test_local_execution.py  test_mip_template_pkg.py
test_mip_template/data/testing_data/: testing_data.json
